перенёс definitions в utils и несколько функций в visualization

--- a/learning of generalizing NN-classifier.ipynb
+++ b/learning of generalizing NN-classifier.ipynb
@@ -27,7 +27,7 @@
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "\n",
-    "import definitions as defs"
+    "from utils import definitions as defs"
    ]
   },
   {
@@ -126,8 +126,6 @@
     "    # one-hot-encoding метки\n",
     "    dataset = dataset.map(lambda p, l: (p, tf.one_hot(l, depth=3)))\n",
     "    dataset.batch(1)\n",
-    "    # удалим временный CSV файл\n",
-    "    # os.remove(path_to_tmp_csv)\n",
     "    \n",
     "    return dataset\n",
     "\n",
@@ -260,7 +258,7 @@
     }
    ],
    "source": [
-    "tf.keras.utils.plot_model(generalizing_model, show_shapes=True, rankdir='TB', dpi=100)"
+    "tf.keras.utils.plot_model(generalizing_model, to_file='model.png', show_shapes=True, rankdir='TB', dpi=100)"
    ]
   },
   {
@@ -426,6 +424,37 @@
    ],
    "source": [
     "plot_history(history, 'loss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2586fa06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overfitted_model = create_model()\n",
+    "overfitted_model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "overfitted_history = overfit_model.fit(entire_ds, epochs=NUM_EPOCHS, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3c0fd174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: E:\\Projects\\Breast-Cancer\\models\\overfitted model\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "overfitted_model.save(defs.OVERFITTED_MODEL)"
    ]
   }
  ],
