--- a/testing of generalizing NN-classifier.ipynb
+++ b/testing of generalizing NN-classifier.ipynb
@@ -25,7 +25,7 @@
     "import tensorflow as tf\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "\n",
-    "import definitions as defs\n",
+    "from utils import definitions as defs\n",
     "from utils import visualization as viz"
    ]
   },
