перенёс функцию plot_history в visualization

--- a/ETL + little bit analytics.ipynb
+++ b/ETL + little bit analytics.ipynb
@@ -68,9 +68,16 @@
     "import numpy as np\n",
     "\n",
     "from utils import definitions as defs\n",
-    "from utils import visualization as viz\n",
-    "\n",
-    "\n",
+    "from utils import visualization as viz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f19b537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "NORM_PATH = os.path.join(os.getcwd(), 'data', 'Таблица учета НОРМА.xlsx')\n",
     "BENIGN_TUMOR_PATH = os.path.join(os.getcwd(), 'data', 'Таблица учета ДОБРОКАЧЕСТВЕННАЯ.xlsx')\n",
     "MALIGNANT_TUMOR_PATH = os.path.join(os.getcwd(), 'data', 'Таблица учета ОНКОЛОГИЯ.xlsx')\n",
@@ -88,8 +95,9 @@
    "outputs": [],
    "source": [
     "def remove_no_digits(cell_content):\n",
+    "    \"\"\"Удаляет из строки нецифры.\"\"\"\n",
     "    if isinstance(cell_content, str):\n",
-    "        digits = str()\n",
+    "        digits = ''\n",
     "        for char in cell_content:\n",
     "            if char.isdigit() or char == '.':\n",
     "                digits += char\n",
