--- a/learning of generalizing NN-classifier.ipynb
+++ b/learning of generalizing NN-classifier.ipynb
@@ -27,7 +27,8 @@
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "\n",
-    "from utils import definitions as defs"
+    "from utils import definitions as defs\n",
+    "from utils import visualization as viz"
    ]
   },
   {
@@ -59,6 +60,17 @@
     "\n",
     "\n",
     "def train_val_test_split(dataframe, test_frac=.1, val_frac=.1):\n",
+    "    \"\"\"Разбивает целый DataFrame на обучающую, валидациолнную и тестовую часть.\n",
+    "    \n",
+    "    Args:\n",
+    "        dataframe: целый Dataframe.\n",
+    "        test_frac (float): доля тестовой части.\n",
+    "        val_frac (float): доля валидационной части.\n",
+    "    Returns:\n",
+    "        train_part (DataFrame): обучающая часть.\n",
+    "        val_part (DataFrame): валидационная часть.\n",
+    "        test_part (DataFrame): тестовая часть.\n",
+    "    \"\"\"\n",
     "    # рандом генератор\n",
     "    rng = np.random.default_rng()\n",
     "    # перетасованные индексы\n",
@@ -97,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.config.experimental.set_visible_devices([], 'GPU')  # отключаю GPU, так как оно у меня слабое"
+    "tf.config.experimental.set_visible_devices([], 'GPU')  # отключаю GPU, так как оно у меня слабое и не даёт преимущества"
    ]
   },
   {
@@ -108,6 +120,14 @@
    "outputs": [],
    "source": [
     "def dataframe_to_dataset(dataframe, file_path):\n",
+    "    \"\"\"Конвертирует DataFrame в Dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        dataframe: DataFrame, который конвертируем.\n",
+    "        file_path: путь, по которому сохраняется временный csv-файл.\n",
+    "    Returns:\n",
+    "        dataset: собственно Dataset.\n",
+    "    \"\"\"\n",
     "    # сохраняем DataFrame во временный CSV файл\n",
     "    dataframe.to_csv(\n",
     "        path_or_buf=file_path,\n",
@@ -162,7 +182,7 @@
    "outputs": [],
    "source": [
     "def create_inputs():\n",
-    "    \"\"\" Создаёт список из входов \"\"\"\n",
+    "    \"\"\"Создаёт список из входов.\"\"\"\n",
     "    inputs = [\n",
     "        tf.keras.Input(shape=(1,), name=input_name, dtype='float64')\n",
     "        if defs.INPUT_NAMES[input_name] == 'numerical'\n",
@@ -174,7 +194,9 @@
     "\n",
     "\n",
     "def encode_inputs(inputs):\n",
+    "    \"\"\"Кодирует входы.\"\"\"\n",
     "    def encode_numerical_input(inpt, dataset=entire_ds):\n",
+    "        \"\"\"Кодирует численные входы.\"\"\"\n",
     "        # Создание слоя нормализации для признака\n",
     "        normalizer = tf.keras.layers.experimental.preprocessing.Normalization()\n",
     "        # Подгатавливаем Dataset, который содержит только необходимый признак\n",
@@ -187,8 +209,8 @@
     "\n",
     "        return encoded_feature\n",
     "    \n",
-    "    \n",
     "    def encode_categorical_input(inpt, dataset=entire_ds):\n",
+    "        \"\"\"Кодирует категориальные входы.\"\"\"\n",
     "        lookup = tf.keras.layers.experimental.preprocessing.IntegerLookup(\n",
     "            output_mode='binary',\n",
     "            num_oov_indices=0,\n",
@@ -350,31 +372,7 @@
     }
    ],
    "source": [
-    "def plot_history(history, mode):\n",
-    "    ax1 = plt.subplot()\n",
-    "    ax1.plot(history.history['%s' % mode])\n",
-    "    ax1.set_xlabel('epochs')\n",
-    "    ax1.set_ylabel('%s' % mode)\n",
-    "    ax1.legend(['train'])\n",
-    "    plt.show()\n",
-    "    \n",
-    "    ax2 = plt.subplot()\n",
-    "    ax2.plot(history.history['val_%s' % mode], color='orange')\n",
-    "    ax2.set_xlabel('epochs')\n",
-    "    ax2.set_ylabel('%s' % mode)\n",
-    "    ax2.legend(['val'])\n",
-    "    plt.show()\n",
-    "    \n",
-    "    ax3 = plt.subplot()\n",
-    "    ax3.plot(history.history['%s' % mode])\n",
-    "    ax3.plot(history.history['val_%s' % mode])\n",
-    "    ax3.set_xlabel('epochs')\n",
-    "    ax3.set_ylabel('%s' % mode)\n",
-    "    ax3.legend(['train', 'val'])\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "plot_history(history, 'accuracy')"
+    "viz.plot_history(history, 'accuracy')"
    ]
   },
   {
@@ -423,7 +421,7 @@
     }
    ],
    "source": [
-    "plot_history(history, 'loss')"
+    "viz.plot_history(history, 'loss')"
    ]
   },
   {
