--- a/testing of generalizing NN-classifier.ipynb
+++ b/testing of generalizing NN-classifier.ipynb
@@ -22,8 +22,8 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "import tensorflow as tf\n",
     "\n",
     "from utils import definitions as defs\n",
     "from utils import visualization as viz"
@@ -51,7 +51,7 @@
    "source": [
     "## Матрицы ошибок\n",
     "\n",
-    "Построим матрицы ошибок с ещё одной меткой \"неопределён\". Эта метку будем назначать в том случае, если ни для одной другой метки вероятность не превысила заданный порог. Порог будем менять."
+    "Построим матрицы ошибок с ещё одной меткой \"не определён\". Эта метку будем назначать в том случае, если ни для одной другой метки вероятность не превысила заданный порог. Порог будем менять."
    ]
   },
   {
@@ -62,6 +62,15 @@
    "outputs": [],
    "source": [
     "def get_true_predicted_labels(threshold):\n",
+    "    \"\"\"Возвращает истинные и предсказанные метки.\n",
+    "    \n",
+    "    Args:\n",
+    "        threshold: порог принятие решений.\n",
+    "    \n",
+    "    Returns:\n",
+    "        true_labels: истинные оценки.\n",
+    "        predicted_labels: предсказанные метки.\n",
+    "    \"\"\"\n",
     "    true_labels = []\n",
     "    predicted_labels = []\n",
     "    for point, true_probabilities in test_ds:\n",
@@ -72,7 +81,7 @@
     "        predicted_probabilities = generalizing_model.predict(point)\n",
     "        best_predicted_probability = np.array(predicted_probabilities[0]).max()\n",
     "        if best_predicted_probability < threshold:\n",
-    "            predicted_label = 'неопределён'\n",
+    "            predicted_label = 'не определён'\n",
     "        else:\n",
     "            predicted_label_index = np.array(predicted_probabilities[0]).argmax()\n",
     "            predicted_label = defs.LABELS[predicted_label_index]\n",
@@ -163,8 +172,8 @@
    "source": [
     "for threshold in [0.4, 0.5, 0.6, 0.7, 0.8, 0.9]:\n",
     "    ys_true, ys_pred = get_true_predicted_labels(threshold)\n",
-    "    cm = viz.get_confusion_matrix(ys_true, ys_pred, defs.LABELS, defs.LABELS + ['неопределён'])\n",
-    "    viz.plot_confusion_matrix(cm, defs.LABELS, defs.LABELS + ['неопределён'], threshold=threshold)"
+    "    cm = viz.get_confusion_matrix(ys_true, ys_pred, defs.LABELS, defs.LABELS + ['не определён'])\n",
+    "    viz.plot_confusion_matrix(cm, defs.LABELS, defs.LABELS + ['не определён'], threshold=threshold)"
    ]
   },
   {
@@ -214,25 +223,36 @@
    "outputs": [],
    "source": [
     "def func1(n):\n",
-    "    \"\"\"\n",
+    "    \"\"\"Визуализирует гистограмму ...\n",
+    "    \n",
+    "    Args:\n",
+    "        n: длина комбинации признаков.\n",
     "    \"\"\"\n",
     "    i = 0\n",
-    "    for _ in itertools.combinations(range(36), n):\n",
+    "    for _ in itertools.combinations(range(32), n):\n",
     "        i += 1\n",
-    "    print(f'Количество комбинаций длиной {n} из 36 = {i}.')\n",
+    "    print(f'Количество комбинаций длиной {n} из 32 = {i}.')\n",
     "    \n",
     "    def leave_features(features, dataset):\n",
     "        \"\"\"Зануляет все признаки, кроме заданных.\n",
     "        \n",
-    "        :param features: признаки, которые не зануляются.\n",
-    "        :param dataset: заданный датасет.\n",
-    "        :return dataset: обработанный датасет.\n",
+    "        Args:\n",
+    "            features: признаки, которые не зануляются.\n",
+    "            dataset: заданный датасет.\n",
+    "        \n",
+    "        Returns:\n",
+    "            dataset: обработанный датасет.\n",
     "        \"\"\"\n",
     "        def zero_feature(point, label):\n",
-    "            \"\"\"Зануляет признак в точке данных.\n",
-    "\n",
-    "            :param point: точка данных\n",
-    "            :param label: метка\n",
+    "            \"\"\"Зануляет признак в точке данных по его метке.\n",
+    "            \n",
+    "            Args:\n",
+    "                point: точка данных.\n",
+    "                label: метка признака, который необходимо занулить.\n",
+    "                \n",
+    "            Returns:\n",
+    "                point: точка данных с занулённым признаком.\n",
+    "                label: метка признака, который занулён.\n",
     "            \"\"\"\n",
     "            if defs.INPUT_NAMES[feature_name] == 'numerical':\n",
     "                point[feature_name] = tf.constant(\n",
@@ -273,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Количество комбинаций длиной 1 из 36 = 36.\n"
+      "Количество комбинаций длиной 1 из 32 = 32.\n"
      ]
     },
     {
@@ -303,7 +323,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Количество комбинаций длиной 2 из 36 = 630.\n"
+      "Количество комбинаций длиной 2 из 36 = 436.\n"
      ]
     },
     {
@@ -333,7 +353,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Количество комбинаций длиной 3 из 36 = 7140.\n"
+      "Количество комбинаций длиной 3 из 36 = 4960.\n"
      ]
     },
     {
@@ -363,7 +383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Количество комбинаций длиной 4 из 36 = 58905.\n"
+      "Количество комбинаций длиной 4 из 36 = 35960.\n"
      ]
     },
     {
@@ -391,20 +411,31 @@
    "outputs": [],
    "source": [
     "def func2(n):\n",
-    "    \"\"\"\n",
+    "    \"\"\"Печатает список комбинаций признаков, точность классификации с которыми превысила 35%.\n",
+    "    \n",
+    "    Args:\n",
+    "        n: длина комбинации признаков.\n",
     "    \"\"\"    \n",
     "    def leave_features(features, dataset):\n",
     "        \"\"\"Зануляет все признаки, кроме заданных.\n",
     "        \n",
-    "        :param features: признаки, которые не зануляются.\n",
-    "        :param dataset: заданный датасет.\n",
-    "        :return dataset: обработанный датасет.\n",
+    "        Args:\n",
+    "            features: признаки, которые не зануляются.\n",
+    "            dataset: заданный датасет.\n",
+    "            \n",
+    "        Returns:\n",
+    "            dataset: обработанный датасет.\n",
     "        \"\"\"\n",
     "        def zero_feature(point, label):\n",
-    "            \"\"\"Зануляет признак в точке данных.\n",
-    "\n",
-    "            :param point: точка данных\n",
-    "            :param label: метка\n",
+    "            \"\"\"Зануляет признак в точке данных по его метке.\n",
+    "            \n",
+    "            Args:\n",
+    "                point: точка данных.\n",
+    "                label: метка признака, который необходимо занулить.\n",
+    "                \n",
+    "            Returns:\n",
+    "                point: точка данных с занулённым признаком.\n",
+    "                label: метка признака, который занулён.\n",
     "            \"\"\"\n",
     "            if defs.INPUT_NAMES[feature_name] == 'numerical':\n",
     "                point[feature_name] = tf.constant(\n",
