--- a/testing of generalizing NN-classifier.ipynb
+++ b/testing of generalizing NN-classifier.ipynb
@@ -20,8 +20,9 @@
    "source": [
     "import itertools\n",
     "\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import tensorflow as tf\n",
     "\n",
