удалил анкеты и перенёс исходные таблицы

--- a/ETL + little bit analytics.ipynb
+++ b/ETL + little bit analytics.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NORM_PATH = os.path.join(os.getcwd(), 'data', 'Таблица учета НОРМА.xlsx')\n",
-    "BENIGN_TUMOR_PATH = os.path.join(os.getcwd(), 'data', 'Таблица учета ДОБРОКАЧЕСТВЕННАЯ.xlsx')\n",
-    "MALIGNANT_TUMOR_PATH = os.path.join(os.getcwd(), 'data', 'Таблица учета ОНКОЛОГИЯ.xlsx')\n",
+    "NORM_PATH = os.path.join(os.getcwd(), 'data', 'origin', 'Таблица учёта НОРМА.xlsx')\n",
+    "BENIGN_TUMOR_PATH = os.path.join(os.getcwd(), 'data', 'origin', 'Таблица учёта ДОБРОКАЧЕСТВЕННАЯ.xlsx')\n",
+    "MALIGNANT_TUMOR_PATH = os.path.join(os.getcwd(), 'data', 'origin', 'Таблица учёта ОНКОЛОГИЯ.xlsx')\n",
     "\n",
     "NORM_N_ROWS = 197\n",
     "BENIGN_TUMOR_N_ROWS = 199\n",
