поменял нэйминг на ETLed data

--- a/learning of generalizing NN-classifier.ipynb
+++ b/learning of generalizing NN-classifier.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(defs.PREPARED_DATA_PATH)\n",
+    "df = pd.read_excel(defs.ETLED_DATA_PATH)\n",
     "\n",
     "\n",
     "def train_val_test_split(dataframe, test_frac=.1, val_frac=.1):\n",
