создал модуль neural_network для работы с нейросетями
перенёс в него функцию dataset_from_csv

--- a/testing of generalizing NN-classifier.ipynb
+++ b/testing of generalizing NN-classifier.ipynb
@@ -26,6 +26,7 @@
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import tensorflow as tf\n",
     "\n",
+    "from utils import neural_network as nn\n",
     "from utils import definitions as defs\n",
     "from utils import visualization as viz"
    ]
@@ -39,10 +40,10 @@
    "source": [
     "generalizing_model = tf.keras.models.load_model(defs.GENERALIZING_MODEL)\n",
     "\n",
-    "entire_ds = defs.get_dataset_from_csv(defs.ENTIRE_DATA_PATH)\n",
-    "train_ds = defs.get_dataset_from_csv(defs.TRAIN_DATA_PATH)\n",
-    "val_ds = defs.get_dataset_from_csv(defs.VALIDATION_DATA_PATH)\n",
-    "test_ds = defs.get_dataset_from_csv(defs.TEST_DATA_PATH)"
+    "entire_ds = nn.dataset_from_csv(defs.ENTIRE_DATA_PATH)\n",
+    "train_ds = nn.dataset_from_csv(defs.TRAIN_DATA_PATH)\n",
+    "val_ds = nn.dataset_from_csv(defs.VALIDATION_DATA_PATH)\n",
+    "test_ds = nn.dataset_from_csv(defs.TEST_DATA_PATH)"
    ]
   },
   {
