переосмыслил структуру ETL + ренейминг

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -14,8 +14,6 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "pd.set_option('max_columns', None)\n",
-    "pd.set_option('max_rows', None)\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import export_graphviz\n",
     "\n",
@@ -29,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(defs.ETLED_DATA_PATH_my_tree)"
+    "df = pd.read_excel(defs.ETLED_DATA_PATH_step_2)"
    ]
   },
   {
@@ -37,7 +35,7 @@
    "id": "7a4205af",
    "metadata": {},
    "source": [
-    "## Кодирование признаков"
+    "## ETL"
    ]
   },
   {
@@ -263,8 +261,15 @@
     "}\n",
     "\n",
     "def encode_categorical_feature(df, feature_name, categories):\n",
+    "    # Столбец в DataFrame становится \"категориальным\". Это означает, что ячейки в нём могут\n",
+    "    # принимать только значения из допустимых категорий либо np.NaN. Допустимые категории\n",
+    "    # определяются при создании такого столбца либо множеством различных ячеек, либо\n",
+    "    # специальным списком. Если допустимые категории определяются специальным списком и \n",
+    "    # значение ячейки не входит в этот список, её значение становится np.NaN.\n",
     "    df[feature_name] = pd.Categorical(df[feature_name], categories=categories)\n",
+    "    # Категории кодируются числами 0, 1, 2, ... np.NaN числом -1.\n",
     "    df[feature_name] = df[feature_name].cat.codes\n",
+    "    # Приведение к типу, допустимому для конвертации DataFrame в Dataset.\n",
     "    df[feature_name] = df[feature_name].astype('int64')\n",
     "\n",
     "for feature_name, categories in categorical_feature_names.items():\n",
@@ -282,6 +287,14 @@
     "X = df.drop(defs.LABEL, axis=1)\n",
     "\n",
     "feature_names = list(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90636216",
+   "metadata": {},
+   "source": [
+    "## Модель дерева решений"
    ]
   },
   {
@@ -364,12 +377,6 @@
     "    plt.xlabel('Важность признака, %')\n",
     "    plt.ylabel('Признак')\n",
     "    plt.show()\n",
-    "    \n",
-    "#     ax = plt.subplot()\n",
-    "#     ax.barh(range(len(model.feature_importances_)), model.feature_importances_, align='center')\n",
-    "#     ax.set_yticks(list(range(len(feature_names))), feature_names)\n",
-    "#     ax.set_xlabel('Важность признака, %')\n",
-    "#     ax.set_ylabel('Признак')\n",
     "\n",
     "plot_feature_importances(tree, feature_names)          "
    ]
