--- a/ETL_step_2.ipynb
+++ b/ETL_step_2.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(defs.ETLED_DATA_PATH_step1)"
+    "df = pd.read_excel(defs.ETLED_DATA_PATH_step_1)"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel(excel_writer=defs.ETLED_DATA_PATH_my_tree, index=False)"
+    "df.to_excel(excel_writer=defs.ETLED_DATA_PATH_step_2, index=False)"
    ]
   },
   {
