--- a/myDecisionTreeClassifier.ipynb
+++ b/myDecisionTreeClassifier.ipynb
@@ -15,13 +15,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f50cb9b7",
+   "metadata": {},
+   "source": [
+    "## ETL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "45b8e4bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(defs.ETLED_DATA_PATH_my_tree)\n",
+    "df = pd.read_excel(defs.ETLED_DATA_PATH_step_2)\n",
     "\n",
     "Y = df[defs.LABEL]\n",
     "X = df.drop(defs.LABEL, axis=1)"
@@ -84,6 +92,14 @@
     "    defs.QUESTION_23: defs.QUESTION_24,\n",
     "    defs.QUESTION_27: defs.QUESTION_26,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9a3a38e",
+   "metadata": {},
+   "source": [
+    "## Модель дерева решений"
    ]
   },
   {
