--- a/ETL_step_1.ipynb
+++ b/ETL_step_1.ipynb
@@ -40256,7 +40256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel(excel_writer=defs.ETLED_DATA_PATH_step1, index=False)"
+    "df.to_excel(excel_writer=defs.ETLED_DATA_PATH_step_1, index=False)"
    ]
   }
  ],
