--- a/learning of generalizing NN-classifier.ipynb
+++ b/learning of generalizing NN-classifier.ipynb
@@ -11,10 +11,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "pd.set_option('max_columns', None)\n",
-    "pd.set_option('max_rows', None)\n",
     "import tensorflow as tf\n",
-    "tf.config.experimental.set_visible_devices([], 'GPU')  # отключаю GPU, так как оно у меня слабое и не даёт преимущества\n",
     "\n",
     "from utils import neural_network as nn\n",
     "from utils import definitions as defs\n",
@@ -36,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(defs.ETLED_DATA_PATH_my_tree)"
+    "df = pd.read_excel(defs.ETLED_DATA_PATH_step_2)"
    ]
   },
   {
@@ -237,7 +234,7 @@
    "id": "69b7389a",
    "metadata": {},
    "source": [
-    "## Модель"
+    "## Модель нейронной сети"
    ]
   },
   {
