беспечное размещение запятой

--- a/myDecisionTreeClassifier.ipynb
+++ b/myDecisionTreeClassifier.ipynb
@@ -109,9 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = dt.DecisionTree(\n",
-    "    criterion='entropy',\n",
-    ")"
+    "tree = dt.DecisionTree()"
    ]
   },
   {
@@ -129,7 +127,7 @@
    "execution_count": 6,
    "id": "9cf12080",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -6022,7 +6020,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29287f11430>"
+       "<graphviz.graphs.Digraph at 0x1954e3cc160>"
       ]
      },
      "execution_count": 6,
@@ -6031,7 +6029,14 @@
     }
    ],
    "source": [
-    "tree.render(rounded=True, show_impurity=True, show_num_samples=True, show_distribution=True, show_label=True, format='png')"
+    "tree.render(\n",
+    "    rounded=True,\n",
+    "    show_impurity=True,\n",
+    "    show_num_samples=True,\n",
+    "    show_distribution=True,\n",
+    "    show_label=True,\n",
+    "    format='png',\n",
+    ")"
    ]
   },
   {
