ООП визуализация важности признаков

--- a/myDecisionTreeClassifier.ipynb
+++ b/myDecisionTreeClassifier.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
     "from IPython import display\n",
     "import pandas as pd\n",
     "\n",
@@ -6020,7 +6023,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1954e3cc160>"
+       "<graphviz.graphs.Digraph at 0x1ee703fd2b0>"
       ]
      },
      "execution_count": 6,
@@ -6083,13 +6086,14 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "features = list(tree.feature_importances_.keys())\n",
+    "importances = tree.feature_importances_.values()\n",
     "\n",
-    "plt.figure(figsize=(10, 7))\n",
-    "plt.barh(list(tree.feature_importances_.keys()), tree.feature_importances_.values(), align='center')\n",
-    "#plt.yticks(list(range(len(feature_names))), feature_names)\n",
-    "plt.xlabel('Важность признака, %')\n",
-    "plt.ylabel('Признак')\n",
+    "fig, ax = plt.subplots(figsize=(10, 7))\n",
+    "ax.barh(features, importances, align='center')\n",
+    "ax.set_xlabel('Важность признака, %')\n",
+    "ax.set_ylabel('Признак')\n",
+    "\n",
     "plt.show()"
    ]
   }
