добавил обработку параметра min_samples_leaf

--- a/myDecisionTreeClassifier.ipynb
+++ b/myDecisionTreeClassifier.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "- [ETL](#ETL)\n",
-    "- [Модель дерева решений](#Модель-дерева-решений)\n",
-    "- [Кросс-вавлидация](#Кросс-валидация)"
+    "- [Переобученная модель дерева решений](#Переобученная-модель-дерева-решений)\n",
+    "- [Обобщающая модель дерева решений](#Обобщающая-модель-дерева-решений)"
    ]
   },
   {
@@ -22,6 +22,8 @@
     "\n",
     "from IPython import display\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from utils import decision_tree as dt\n",
     "from utils import definitions as defs"
@@ -112,33 +114,13 @@
    "id": "b9a3a38e",
    "metadata": {},
    "source": [
-    "## Модель дерева решений"
+    "## Переобученная модель дерева решений"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2ea69ae8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree = dt.DecisionTree()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "0421b68d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree.fit(X, Y, categorical_feature_names, numerical_feature_names, special_cases=special_cases)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9cf12080",
    "metadata": {
     "scrolled": true
    },
@@ -6033,16 +6015,18 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x18e3fdaf070>"
+       "<graphviz.graphs.Digraph at 0x23296770af0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tree.render(\n",
+    "overfitted_tree = dt.DecisionTree()\n",
+    "overfitted_tree.fit(X, Y, categorical_feature_names, numerical_feature_names, special_cases=special_cases)\n",
+    "overfitted_tree.render(\n",
     "    rounded=True,\n",
     "    show_impurity=True,\n",
     "    show_num_samples=True,\n",
@@ -6054,7 +6038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d721a0be",
    "metadata": {
     "scrolled": false
@@ -6067,7 +6051,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6078,7 +6062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6d52108b",
    "metadata": {},
    "outputs": [
@@ -6096,8 +6080,8 @@
     }
    ],
    "source": [
-    "features = list(tree.feature_importances.keys())\n",
-    "importances = tree.feature_importances.values()\n",
+    "features = list(overfitted_tree.feature_importances.keys())\n",
+    "importances = overfitted_tree.feature_importances.values()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 7))\n",
     "ax.barh(features, importances, align='center')\n",
@@ -6108,67 +6092,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "deeb71f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree.score(X, Y)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "68afc47f",
    "metadata": {},
    "source": [
-    "## Кросс-валидация"
+    "## Обобщающая модель дерева решений"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "id": "7fccc32e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    X, Y,\n",
+    "    train_size=0.7,\n",
+    "    random_state=45,  # 42 проблемы\n",
+    "    stratify=Y,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9febd4d1",
+   "metadata": {},
+   "source": [
+    "Кросс-валидации гиперпараметров."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "891215a8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(estimator=<utils.decision_tree.DecisionTree object at 0x0000018E4A572670>,\n",
-       "             param_grid={'min_samples_split': [2, 4, 8, 16]})"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лучшие гиперпараметры:\n",
+      "min_samples_leaf: 1\n",
+      "min_samples_split: 2\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
-    "    X, Y,\n",
-    "    train_size = 0.7,\n",
-    "    stratify = Y,\n",
-    ")\n",
-    "\n",
-    "param_grid = {\n",
-    "    'min_samples_split': [2, 4, 8, 16],\n",
-    "    # 'min_samples_leaf': [1, 2],\n",
-    "}\n",
+    "param_grid = [\n",
+    "    {\n",
+    "        'min_samples_split': [2],\n",
+    "        'min_samples_leaf': [1],\n",
+    "    },\n",
+    "    {\n",
+    "        'min_samples_split': [4],\n",
+    "        'min_samples_leaf': [1, 2],\n",
+    "    },\n",
+    "    {\n",
+    "        'min_samples_split': [8],\n",
+    "        'min_samples_leaf': [1, 2, 4],\n",
+    "    },\n",
+    "    {\n",
+    "        'min_samples_split': [16],\n",
+    "        'min_samples_leaf': [1, 2, 4, 8],\n",
+    "    },\n",
+    "]\n",
     "\n",
     "fit_params = {\n",
     "    'categorical_feature_names': categorical_feature_names,\n",
@@ -6177,28 +6165,34 @@
     "}\n",
     "\n",
     "search = GridSearchCV(dt.DecisionTree(), param_grid)\n",
-    "search.fit(X_train, Y_train, **fit_params)"
+    "search.fit(X_train, Y_train, **fit_params)\n",
+    "\n",
+    "print('Лучшие гиперпараметры:')\n",
+    "for param, value in search.best_params_.items():\n",
+    "    print(f'{param}: {value}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "457a5a86",
+   "execution_count": 9,
+   "id": "af5429b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'min_samples_split': 2}"
+       "0.5808383233532934"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "search.best_params_"
+    "generalizing_tree = dt.DecisionTree(**search.best_params_)\n",
+    "generalizing_tree.fit(X_train, Y_train, categorical_feature_names, numerical_feature_names, special_cases=special_cases)\n",
+    "generalizing_tree.score(X_test, Y_test)"
    ]
   }
  ],
